[package]
name = "chaseconv"
version = "0.1.0"
authors = ["Gabriel Faria"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
byteorder = "1.4.3"
glam = "0.20.0"
gltf = "0.16.0"
memchr = "2.4.1"
safe-transmute = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

[dev-dependencies]
pretty_assertions = "1.0.0"
