[package]
name = "chaseconv"
version = "0.1.0"
authors = ["Gabriel Faria"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
byteorder = "1.4.3"
dialoguer = "0.9.0"
glam = "0.20.1"
gltf = { version = "0.16.0", features = ["names"] }
memchr = "2.4.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
