[package]
name = "chaseconv"
version = "0.2.0"
authors = ["Gabriel Faria"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.13.0"
byteorder = "1.4.3"
dialoguer = "0.10.4"
glam = "0.24.0"
gltf = { version = "1.1.0", features = ["names"] }
memchr = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
